# RoboCon

./: README.md
Docs/: Connect4_Game_Development  solver_log.md
PC/: RoboCon.sh
PC/src/DQN_Training/: connect4dqn.py  connect4env.py  gameRecord.py  notes
PC/src/scripts/: CMakeLists.txt  client.py  connect4dqn.py  connect4env.py  guicomms.cpp  guicomms.h  main.cpp  main.py  robosocket.cpp  robosocket.hpp  rpiClient.py  vision.cpp  vision.h
PC/src/scripts/GUI/: RoboConGui.py  RoboConGui.ui
PC/src/scripts/GUI/images/: RoboConGui.py
RPI/: controlserver.py  main.py  motordriver.py  robocontrol.py
RPI/IndependantControl/: main.py  motordriver.py
src/DQN_Training/: gameRecord.py
src/DQN_Training/use_model/2020-04-20/: 2020-04-20 01:56:07.061223__Connect4_DQN__ 100.00max_ -41.00avg_-200.00min.model  2020-04-20 04:05:33.999107__Connect4_DQN__ 100.00max_ -56.50avg_-200.00min.model  2020-04-20 13:33:26.038354__Connect4_DQN__ 100.00max_ -56.00avg_-200.00min.model  2020-04-20 14:25:45.345412__Connect4_DQN__ 100.00max_  41.50avg_-200.00min.model
src/DQN_Training/use_model/2020-04-21/: 2020-04-21 01:25:40.579219__Connect4_DQN__ 100.00max_  44.50avg_-200.00min.model  2020-04-21 01:50:06.243587__Connect4_DQN__ 100.00max_  50.50avg_-200.00min.model  2020-04-21 03:47:12.462608__Connect4_DQN__ 100.00max_ -18.50avg_-200.00min.model  2020-04-21 11:01:32.444480__Connect4_DQN__ 100.00max_-107.25avg_-200.00min.model  (+2 more)
src/RPI/IndependantControl/: readme.md  robocontrol.py
src/scripts/: RoboCon.sh  guicomms.cpp  guicomms.h  main.cpp  robosocket.cpp  robosocket.hpp  vision.cpp
(+13 files in other folders)
